0.7.0 - currently working on
- [#2885] Feature: Add FrontEndUser::getGender
- [#3044] Change: Remove deprecated functions for 0.7.0
- [#2692| Feature: Add markNodesVisible function to visibility tree
- [#2834] Feature: Add db::selectColumnForMultiple
- [#3080] Feature: Add an object factory
- [#2683] Feature: Implement saving of m:n-related records
- [#3076] Feature: Let tx_oelib_MapperRegistry add a testing layer when creating mappers in testing mode
- [#3074] Feature: Create a visibility structure
- [#2681] Feature: Implement recursively saving n:1 and comma-separated relations
- [#3067] Feature: tx_oelib_List needs a callback to the containing model
- [#3068] Fix: Value of $functionName not quoted in the data mapper
- [#3064] Feature: ConfigurationProxy should extend PublicObject
- [#2973] Fix: tx_oelib_List::purgeCurrent is not applicable within foreach loops

0.6.0 - released 2009-06-05
- [#2991] Feature: Add a test that fails if the phpmyadmin extension is installed
- [#1185] Feature: Add a translator class
- [#2960] Feature: Add a function for setting a BE user's language
- [#2959] Feature: Add a function for getting the current BE user
- [#961] Change: Require TYPO3 4.2
- [#1141] Change: Require PHP 5.2
- [#2950] Feature: Add a method getArrayKeys() to tx_oelib_Configuration
- [#2915] Fix: The CLI module also selects deleted FE users
- [#2898] Feature: Add a function mapper::getLoadedTestingModel
- [#2751] Feature: Support bidirectional relations
- [#2886] Change: Refactor the creation of the cObj in the templatehelper
- [#2883] Feature: Add a function to tx_oelib_List to purge elements from the list
- [#2882] Feature: Add a function to tx_oelib_List to append a list to another list
- [#2826] Feature: Add an interface "address" and use it for the realty object model
- [#2749] Feature: Add a function for sorting list by providing a comparison function
- [#2325] Fix: SQL errors in tx_oelib_testingFramework_testcase with TYPO3 4.3